Bug tracker at http://code.google.com/p/psutil/issues

1.1.0 - XXXX-XX-XX
------------------

NEW FEATURES

 * 412: [Linux] get/set process resource limits.


1.0.1 - 2013-07-12
------------------

BUG FIXES

 * #405: network_io_counters(pernic=True) no longer works as intended in 1.0.0.


1.0.0 - 2013-07-10
------------------

NEW FEATURES

 * #18:  Solaris support (yay!)  (thanks Justin Venus)
 * #367: Process.get_connections() 'status' strings are now constants.
 * #380: test suite exits with non-zero on failure.  (patch by floppymaster)
 * #391: extensively use unittest2 module in unit tests and provide
         workarounds if this is not installed on python < 2.7.

BUG FIXES

 * #374: [Windows] negative memory usage reported when processes use a lot of
         memory.
 * #379: [Linux] Process.get_memory_maps() may raise ValueError.
 * #394: [OSX] Mapped memory regions report incorrect file name.
 * #404: [Linux] sched_*affinity() are implicitly declared.  (patch by Arfrever)

API CHANGES

 * Process.get_connections() 'status' field is no longer a string but a constant
   object (psutil.CONN_*).
 * Process.get_connections() 'local_address' and 'remote_address' fields renamed
   to 'laddr' and 'raddr'.
 * psutil.network_io_counters() renamed to psutil.net_io_counters().


0.7.1 - 2013-05-03
------------------

BUG FIXES:

 * #325: [BSD] psutil.virtual_memory() can raise SystemError.
         (patch by Jan Beich)
 * #370: [BSD] Process.get_connections() requires root.  (patch by John Baldwin)
 * #372: [BSD] different process methods raise NoSuchProcess instead of
         AccessDenied.


0.7.0 - 2013-04-12
------------------

NEW FEATURES

 * #233: code migrated to Mercurial (yay!)
 * #246: psutil.error module is deprecated and scheduled for removal.
 * #328: [Windows] process IO nice/priority support.
 * #359: psutil.get_boot_time()
 * #361: [Linux] psutil.cpu_times() now includes new 'steal', 'guest' and